project_ph/dev/argocd-demo.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: helloworld
    env: dev
    visualize: "true"
  name: argocd-service
  namespace: dev
spec:
  ports:
  - name: http
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: helloworld
    env: dev
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: helloworld
    env: dev
  name: argocd
  namespace: dev
spec:
  replicas: 2
  selector:
    matchLabels:
      app: helloworld
      env: dev
  template:
    metadata:
      labels:
        app: helloworld
        env: dev
        visualize: "true"
    spec:
      containers:
      - env:
        - name: ENV_PREFIX
          valueFrom:
            configMapKeyRef:
              key: env.prefix
              name: argocd-properties-bm287d4462
        image: tykola/hello-spring:argocd
        imagePullPolicy: Always
        name: argocd-pod
        ports:
        - containerPort: 8080
