project_ph/dev/helloworld.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: helloworld
    env: dev
    visualize: "true"
  name: hello-world-service
  namespace: dev
spec:
  ports:
  - name: http
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: helloworld
    env: dev
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: helloworld
    env: dev
  name: hello-world
  namespace: dev
spec:
  replicas: 2
  selector:
    matchLabels:
      app: helloworld
      env: dev
  template:
    metadata:
      labels:
        app: helloworld
        env: dev
        visualize: "true"
    spec:
      containers:
      - env:
        - name: ENV_PREFIX
          valueFrom:
            configMapKeyRef:
              key: env.prefix
              name: dev-properties-77m6t9474k
        image: tykola/hello-spring:dev
        imagePullPolicy: Always
        name: hello-world-pod
        ports:
        - containerPort: 8080
