project_ph/dev/dev-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
  name: minimal-ingress
  namespace: dev
spec:
  rules:
  - host: dev.com
    http:
      paths:
      - backend:
          serviceName: argocd-service
          servicePort: 8080
        path: /argo
      - backend:
          serviceName: hello-world-service
          servicePort: 8080
        path: /
